--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                             <p>3criollitos, Mermelada</p> 
                         </div>
                     </div>
-                    <img src="./img/Line 9.png" alt="">
+                    <img class="image" src="./img/Line 9.png" alt="">
                     <div class="child">
                         <div class="child_img">
                             <img src="./img/pexels-chevanon-photography-302900 1.png" alt="">
@@ -128,7 +128,7 @@
                             <p>3criollitos, Mermelada</p> 
                         </div>
                     </div>
-                    <img src="./img/Line 9.png" alt="">
+                    <img class="image" src="./img/Line 9.png" alt="">
                     <div class="child">
                         <div class="child_img">
                             <img src="./img/pexels-chevanon-photography-302900 1.png" alt="">
@@ -139,7 +139,7 @@
                             <p>3criollitos, Mermelada</p> 
                         </div>
                     </div>
-                    <img src="./img/Line 9.png" alt="">
+                    <img class="image" src="./img/Line 9.png" alt="">
                 </div>
                 <div class="child_parent">
                     <h2 style="text-align: center;"> Almuerzo </h2>
@@ -153,7 +153,7 @@
                             <p>3criollitos, Mermelada</p> 
                         </div>
                     </div>
-                    <img src="./img/Line 9.png" alt="">
+                    <img class="image" src="./img/Line 9.png" alt="">
                     <div class="child">
                         <div class="child_img">
                             <img src="./img/pexels-chevanon-photography-302900 1.png" alt="">
@@ -164,7 +164,7 @@
                             <p>3criollitos, Mermelada</p> 
                         </div>
                     </div>
-                    <img src="./img/Line 9.png" alt="">
+                    <img class="image" class="image" src="./img/Line 9.png" alt="">
                     <div class="child">
                         <div class="child_img">
                             <img src="./img/pexels-chevanon-photography-302900 1.png" alt="">
@@ -175,7 +175,7 @@
                             <p>3criollitos, Mermelada</p> 
                         </div>
                     </div>
-                    <img src="./img/Line 9.png" alt="">
+                    <img class="image" src="./img/Line 9.png" alt="">
                 </div>
                 <div class="child_parent">
                     <h2 style="text-align: center;"> Merienda</h2>
@@ -189,7 +189,7 @@
                             <p>3criollitos, Mermelada</p> 
                         </div>
                     </div>
-                    <img src="./img/Line 9.png" alt="">
+                    <img class="image" src="./img/Line 9.png" alt="">
                     <div class="child">
                         <div class="child_img">
                             <img src="./img/pexels-chevanon-photography-302900 1.png" alt="">
@@ -200,7 +200,7 @@
                             <p>3criollitos, Mermelada</p> 
                         </div>
                     </div>
-                    <img src="./img/Line 9.png" alt="">
+                    <img class="image" src="./img/Line 9.png" alt="">
                     <div class="child">
                         <div class="child_img">
                             <img src="./img/pexels-chevanon-photography-302900 1.png" alt="">
@@ -211,7 +211,7 @@
                             <p>3criollitos, Mermelada</p> 
                         </div>
                     </div>
-                    <img src="./img/Line 9.png" alt="">
+                    <img class="image" src="./img/Line 9.png" alt="">
                 </div>
                 
             </div>
@@ -232,7 +232,7 @@
         <!-- ==============Content End=============== -->
 
         <!-- ==============Start Article============= -->
-        <article>
+        <!-- <article>
             <p style="color: #E76F51; text-align: center;">Expertos</p>
             <h2 style="text-align: center; font-family: Rancho; font-weight: 400; font-size: 64px;">Nuestra Cocina</h2>
             <div class="art_child">
@@ -270,11 +270,11 @@
                     </div>
                 </div>
             </div>
-        </article>
+        </article> -->
         <!-- ==============Article End=============== -->
 
         <!-- ==============Start Aside=============== -->
-            <img style="width: 1515px;" src="./img/aide img.png" alt="">
+            <!-- <img style="width: 1515px;" src="./img/aide img.png" alt="">
 
             <aside>
                 <p style="color: #E76F51; text-align: center; font-family: Josefin Sans; font-weight: 400; font-size: 24px;">Te Esperamos</p>
@@ -289,11 +289,11 @@
                     <input class="input input7" type="text" placeholder="Mensaje">
                     <button class="btn5">Encarger</button>
                 </div>
-            </aside>
+            </aside> -->
         <!-- ==============Aside End================= -->
 
         <!-- ==============Start Footer============== -->
-        <footer>
+        <!-- <footer>
             <div class="footer1">
                 <img src="./img/Resto (1).png" alt="">
                 <p>Este es un simple texto de relleno solo esta para rellenar, y mostrar el lugar donde iria un texto real de la pagina cuando este hecha en su totalidad</p>
@@ -326,7 +326,7 @@
                 <i style="font-size: 25px;" class='bx bxs-location-plus' ></i><p style="display: inline;">Humberto Primo 771</p><p>Cordoba Capital, Bv Centro</p>
                 <img src="./img/Mapa.png" alt="">
             </div>
-        </footer>
+        </footer> -->
         <!-- ==============Footer End================ -->
 
 
